# orqestra

./: .dockerignore  .gitignore  Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  claim_extractor.py  compile_brain.py  contradiction_detector.py  demo.py  docker-compose.yml  embedder.py  explainer.py  inject_traffic.py  langgraph_provenance.py  main.py  output_collector.py  package-lock.json  pyproject.toml  report.html  reporter.py  run.sh  schema.sql
alembic/: env.py
api/: auth.py  main.py
archive/: DATA_STRUCTURE_OPTIONS.md  DESIGN_1.md  LLM_REDUCTION_OPTIONS.md  ORQESTRA_COMPLIANCE_AUDIT_v3.3.md  ORQESTRA_COMPLIANCE_AUDIT_v3_4_DELTA.md  ORQESTRA_PRODUCT_SPEC_V4.md  ORQESTRA_V4_FAULT_TRIAGE.md  Orqestra_Pitch_Deck.pptx  PERFORMANCE_BASELINE.md
core/: celery_app.py  database.py
dataset/: orqestra_50.py
docs/: container_maintenance.txt  developer_instn.txt  dir_structure.txt  progress.txt  quick_setup.txt  sprint_5_1_test.txt  test.txt  test_bootstrapping.txt  test_canon.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
healthtrack/: knowledge_bases.py  scenarios.py
models/: database.py
observability/: __init__.py  celery_signals.py  context.py  logging.py  metrics.py  middleware.py  pricing.py  timing.py
pgbouncer/: pgbouncer.ini  userlist.txt
presets/: clinical.yaml  consumer.yaml  finance.yaml  general.yaml  policy.yaml
scripts/: adapter_smoke_test.py  canon_node_smoke_test.py  declare_demo_canon.py  diagnose_contradiction_timing.py  diagnose_contradictions.py  fleet_langgraph_smoke_test.py  log_summary.py  (+8 more)
(+80 files in other folders)
