[project]
name = "orqestra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "dspy-ai>=3.2.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "openai>=2.43.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
